--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/search"
-        android:title="@string/app_name"
+        android:title="@string/search"
         android:orderInCategory="1"
         android:icon="@drawable/magnify"
         app:showAsAction="ifRoom" />
