--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/tools" >
 
     <item
+        android:id="@+id/actionNotificationItem"
         android:orderInCategory="1"
         android:title="@string/menu_item_notification"
         android:icon="@mipmap/ic_message_bulleted" />
