--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,6 @@
         android:id="@+id/search"
         android:title="@string/search"
         android:orderInCategory="1"
-        android:icon="@drawable/magnify"
+        android:icon="@mipmap/ic_magnify"
         app:showAsAction="ifRoom" />
 </menu>
